<resources>
    <string name="app_name">ProductoFinal</string>
    <string name="str_login">Inicio de sesión</string>
    <string name="str_username">Usuario</string>
    <string name="str_password">Contraseña</string>
    <string name="str_register_question">Todavía no tiene una cuenta?</string>
    <string name="str_register">Registrese ahora</string>
    <string name="err_username">El campo usuario es requerido.</string>
    <string name="err_password">El campo contraseña es requerido.</string>
    <string name="str_name">Nombre</string>
    <string name="str_last_name">Apellido</string>
    <string name="str_address">Dirección</string>
    <string name="str_mail">Correo</string>
    <string name="str_phone">Teléfono</string>
    <string name="str_sign_up">Registrarse</string>
    <string name="msg_sign_up_success">El registro fue exitoso.</string>
    <string name="str_title_sign_up">Registro</string>
    <string name="str_ok">Ok</string>
    <string name="title_activity_drawer_lateral">DrawerLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Lista de productos</string>
    <string name="menu_gallery">Pedidos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_producto">Sistema de Productos</string>
    <string name="nav_header_producto">Sistema de Productos</string>
    <string name="nav_header_correo">hacm2016@gmail.com</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_cerrar">Cerrar sesión</string>
    <string name="menu_lista">Lista de productos</string>
    <string name="title_product_detail">Detalle de producto</string>
    <string name="title_carrito">Carrito de compras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>